# Projeto-de-pesquisa-EBM

./: .gitignore  .marimo.toml  CHANGELOG.md  CHANGELOG_conversao_coordenadas.md  COMMANDS.md  CONTRIBUTING.md  LICENSE  MIGRATION_SUMMARY.md  MISSING_FILES.md  PROJECT_STATUS.md  Projeto_pesquisa.ipynb  QUICKSTART.md  README.md  WELCOME.md  analise_equacoes_liu2000.md  analysisTest_RBDS.ipynb  correcoes_sugeridas.py  extract_pdf_text.py  pyproject.toml  test_optuna.py  verify_installation.py
2.Código/: Projeto_pesquisa.ipynb
2.Código/2.1Analysis test_RBDS/: RBDS002runT25markers.txt  analysisTest_RBDS_r08.ipynb  analysisTest_RBDS_r09.ipynb
2.Código/2.2Analysis test_RBDS/: RBDS002runT25forces.txt  (+3 more)
3.Dados/: 39452935_RBDSinfo (entrevistas).xlsx  RBDS008runT35markers.txt  RBDS008static.txt
Planejamento/: Projeto de pesquisa_PGEBM.xlsx
data/: README.md
docs/: CORRECAO_CONDICOES_INICIAIS.md  CORRECAO_CONFLITO_VARIAVEIS.md  CORRECAO_EIXO_COORDENADAS.md  CORRECAO_EIXO_VERTICAL_Y.md  CORRECAO_MGRF_OTIMIZACAO.md  CORRECAO_PASSO_INTEGRACAO.md  CORRECAO_SINAL_GRAVIDADE.md  README_conversao_coordenadas.md  conversao_coordenadas_liu2000.md  correcao_simulacao_liu2000.md  variaveis_modelo_liu2000.md
examples/: basic_usage.py
notebooks/: README.md  analysis_rbds_r09_RNW.py  analysis_rbds_r10.py  analysis_rbds_r11.py  analysis_rbds_r12.py  analysis_test_rbds.py  analysis_test_rbds_r08.py  analysis_test_rbds_r09.py  modelamento_msd_nedergaard.py  modelamento_msd_niels_simplex.py  projeto_pesquisa.py
tests/: test_basic.py  test_conversao_coordenadas.py
(+12 files in other folders)
